Remove the Animation on Counts

--- a/Fashion_Avenue/Views/Admin/IndexAdmin.cshtml
+++ b/Fashion_Avenue/Views/Admin/IndexAdmin.cshtml
@@ -16,35 +16,36 @@
 <div class="quick_activity_wrap">
 <div class="single_quick_activity">
 <h4>Total User</h4>
-                                            <h3><span class="counter">@ViewData["User"] </span> </h3>
+                                            <h3><span>@ViewData["User"] </span> </h3>
 </div>
 <div class="single_quick_activity">
 <h4>Total Products</h4>
-                                            <h3><span class="counter"> @ViewData["Product"]</span> </h3>
+                                            <h3><span>@ViewData["Product"]</span> </h3>
 </div>
 <div class="single_quick_activity">
                                             <h4>Total Product Like</h4>
-                                            <h3> <span class="counter">@ViewData["Like"] </span> </h3>
+                                            <h3> <span>@ViewData["Like"] </span> </h3>
 </div>
+
 <div class="single_quick_activity">
                                             <h4>Total Blogs</h4>
-                                            <h3> <span class="counter">@ViewData["Blog"]</span> </h3>
+                                            <h3> <span>@ViewData["Blog"]</span> </h3>
 </div>
                                         <div class="single_quick_activity">
                                             <h4>Total Blogs Comments</h4>
-                                            <h3> <span class="counter">@ViewData["BlogComment"]</span> </h3>
+                                            <h3> <span>@ViewData["BlogComment"]</span> </h3>
                                         </div>
                                         <div class="single_quick_activity">
                                             <h4>Total Coupon Code</h4>
-                                            <h3><span class="counter">@ViewData["Coupon"] </span> </h3>
+                                            <h3><span>@ViewData["Coupon"] </span> </h3>
                                         </div>
                                         <div class="single_quick_activity">
                                             <h4>Total Used Coupon Code</h4>
-                                            <h3><span class="counter"> @ViewData["UsedCoupon"]</span> </h3>
+                                            <h3><span> @ViewData["UsedCoupon"]</span> </h3>
                                         </div>
                                         <div class="single_quick_activity">
                                             <h4>Total Checkout</h4>
-                                            <h3> <span class="counter">@ViewData["Cart"] </span> </h3>
+                                            <h3> <span>@ViewData["Cart"] </span> </h3>
                                         </div>
                                       
 </div>
