--- a/Fashion_Avenue/Views/Home/Index.cshtml
+++ b/Fashion_Avenue/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@ Shop Now
             <div class="item-slick1 item2-slick1" style="background-image: url(/assets/images/pexels-borevina-1778412.jpg);">
 <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
 <h2 class="caption1-slide1 xl-text2 t-center bo14 p-b-6 animated visible-false m-b-22" data-appear="rollIn">
-Leather Bags
+Clothes
 </h2>
 <span class="caption2-slide1 m-text1 t-center animated visible-false m-b-33" data-appear="lightSpeedIn">
                         New Collection 2024
@@ -76,7 +76,7 @@ Shop Now
             <div class="item-slick1 item3-slick1" style="background-image: url(/assets/images/pexels-pixabay-325876.jpg);">
 <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
 <h2 class="caption1-slide1 xl-text2 t-center bo14 p-b-6 animated visible-false m-b-22" data-appear="rotateInDownLeft">
-Leather Bags
+Leather Shoes
 </h2>
 <span class="caption2-slide1 m-text1 t-center animated visible-false m-b-33" data-appear="rotateInUpRight">
                         New Collection 2024
